# RaptorDocu

./: .cursorrules  .gitignore  README.md  docker-compose.yml  search-query.json  test-crawl.sh  test-direct-embed.sh  test-document.json  test_api.py
.github/workflows/: build.yml  ci.yml
backend/: .env.example  Dockerfile.dev  package.json  pnpm-lock.yaml  tsconfig.json
backend/scripts/: README.md  raptor-cli.sh  verify-health.sh
backend/src/: app.module.ts  health.controller.ts  main.ts
backend/src/crawler/: crawler.module.ts
backend/src/weaviate/: weaviate.module.ts
crawler/: Dockerfile.dev  pyproject.toml
crawler/src/: __init__.py  app.py
crawler/src/api/: __init__.py
crawler/src/api/v1/: __init__.py  router.py
crawler/src/api/v1/routes/: __init__.py  crawl.py  embedding.py  summary.py
crawler/src/crawl4ai/: __init__.py  client.py  service.py
crawler/src/embedding/: __init__.py  service.py  weaviate.py
crawler/src/summarization/: __init__.py  raptor.py  service.py
crawler/src/utils/: __init__.py  config.py
crawler/tests/: __init__.py  conftest.py
crawler/tests/api/: __init__.py  test_health.py
crawler/tests/crawl4ai/: __init__.py  test_service.py
docs/: API_ENDPOINTS.md  API_FIXES_SUMMARY.md  CHANGELOG.md  DEMO.md  PLAN.md  PROJECT_PLAN.md  WORKFLOW_TEST_SUMMARY.md
docs/structure/: structure.md
frontend/: Dockerfile.dev  jest.setup.js  package.json  pnpm-lock.yaml  tailwind.config.ts
scripts/: README.md  workflow-demo.sh
scripts/tests/: README.md  run_all_tests.py  test-full-workflow.py  test-simple-embed.py  test-simple.py
(+48 files in other folders)
